              do not change the topology (e.g., Reidemeister moves).
        Class LockViolation:
            - New exception class used when the user attempts to change a
              locked simplex or facet.
        Class Matrix<T>:
            - Added destructive and non-destructive rank() functions.
            - New routines negateRow() and negateCol().
        Class NormalSurface, NormalHypersurface:
            - Fixed a bug where, if a surface was a normalised triangle link
              but not a thin triangle link, then calling isThinTriangleLink()
              _before_ isNormalTriangleLink() would make the latter return
              an empty list of results.  Likewise with tetrahedron links in
              4-dimensional triangulations.
            - Fix a bug in components() when used on disconnected surfaces,
              where if it were called _after_ connectedness has already been
              established (i.e., after isOrientable(), isTwoSided(),
              isConnected(), or an earlier call to components()), then it would
              return the entire surface as a single component.
        Class Packet:
            - Renamed ChangeEventSpan to PacketChangeSpan, to make it clear
              that this only matters for objects held by packets.  The old
              name is kept as a deprecated alias.
            - New inner type alias PacketChangeGroup, to assist with readability
              when using a ChangeEventSpan for optimisation purposes only.
        Class PacketData<Held>:
            - Renamed ChangeEventSpan to PacketChangeSpan, to make it clear
              that this only matters for objects held by packets.  The old
              name is kept as a deprecated alias.
            - New inner type alias PacketChangeGroup, to assist with readability
              when using a ChangeEventSpan for optimisation purposes only.
            - The inner ChangeEventSpan class has a new member function held().
        Class Perm<n>: